--- a/examples/example01_indices.ipynb
+++ b/examples/example01_indices.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "## Load time series\n",
     "\n",
-    "We use time series from the Netherlands and obtain them from the python package [Pastas](https://github.com/pastas/pastas)."
+    "We use time series of the precipitation and potential (Makkink) evaporation from the Netherlands and obtain them from the python package [Pastas](https://github.com/pastas/pastas)."
    ]
   },
   {
