add genextreme (gev) as valid distrubtion

--- a/examples/example01_indices.ipynb
+++ b/examples/example01_indices.ipynb
@@ -194,7 +194,7 @@
    "source": [
     "## Calculate SPEI\n",
     "\n",
-    "The standardized precipitation evaporation index (SPEI) is calculated by first substracting the evaporation from the precipitation time series. By default the fisk distribution is used to calculate the SPEI, however for other regularly used distributions are lognorm and pearson3. This time series is also summed over a 30D rolling interval.\n",
+    "The standardized precipitation evaporation index (SPEI) is calculated by first substracting the evaporation from the precipitation time series. By default the fisk distribution is used to calculate the SPEI, however for other regularly used distributions are lognorm, pearson3 and genextreme. This time series is also summed over a 30D rolling interval.\n",
     "\n",
     "For the literature we refer to: Vicente-Serrano S.M., Beguería S., López-Moreno J.I.: [A Multi-scalar drought index sensitive to global warming: The Standardized Precipitation Evapotranspiration Index](https://doi.org/10.1175/2009JCLI2909.1), 2010."
    ]
