--- a/doc/examples/example01_indices.ipynb
+++ b/doc/examples/example01_indices.ipynb
@@ -18,9 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import spei as si # si for standardized index\n",
     "import pandas as pd\n",
@@ -39,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +87,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "date\n",
+       "1980-01-30    43.1\n",
+       "1980-01-31    46.8\n",
+       "1980-02-01    56.3\n",
+       "1980-02-02    57.0\n",
+       "1980-02-03    62.8\n",
+       "              ... \n",
+       "2016-10-27    37.5\n",
+       "2016-10-28    37.5\n",
+       "2016-10-29    37.8\n",
+       "2016-10-30    36.1\n",
+       "2016-10-31    35.1\n",
+       "Name: rain, Length: 13425, dtype: float64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = 30 # days\n",
+    "series = prec.rolling(f'{f}D', min_periods=f).sum().dropna()\n",
+    "series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -99,14 +142,13 @@
        "Length: 13425, dtype: float64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f = 30 # days\n",
-    "spi1 = si.spi(prec.rolling(f'{f}D', min_periods=f).sum().dropna(), dist=scs.gamma)\n",
+    "spi1 = si.spi(series, dist=scs.gamma)\n",
     "spi1"
    ]
   },
@@ -119,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -140,19 +182,19 @@
        "Length: 13425, dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "spi2 = si.spi(prec.rolling(f'{f}D', min_periods=f).sum().dropna(), dist=scs.pearson3)\n",
+    "spi2 = si.spi(series, dist=scs.pearson3)\n",
     "spi2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +260,7 @@
        "Length: 13425, dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +305,7 @@
        "Length: 644, dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +365,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "spei_dev",
+   "display_name": "speidev",
    "language": "python",
    "name": "python3"
   },
@@ -337,12 +379,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "4c23bd3ec3b57aa110d7395b398694023be95a96821d5bd1b8b1b4156052efce"
+    "hash": "2279c7ae29edfb28b339b66ce2f59ffc873c6e74c684d306a7300ed42278bdc7"
    }
   }
  },
