remove unnecessary fixture

--- a/doc/examples/example01_indices.ipynb
+++ b/doc/examples/example01_indices.ipynb
@@ -31,7 +31,7 @@
     }
    ],
    "source": [
-    "import spei as si # si for standardized index\n",
+    "import spei as si  # si for standardized index\n",
     "import pandas as pd\n",
     "import scipy.stats as scs\n",
     "import matplotlib.pyplot as plt"
@@ -63,15 +63,23 @@
     }
    ],
    "source": [
-    "fileurl = 'https://raw.githubusercontent.com/pastas/pastas/master/doc/examples/data'\n",
-    "prec = pd.read_csv(f'{fileurl}/rain_nb1.csv', index_col=0, parse_dates=True).squeeze().multiply(1e3) # to mm\n",
-    "evap = pd.read_csv(f'{fileurl}/evap_nb1.csv', index_col=0, parse_dates=True).squeeze().multiply(1e3) # to mm\n",
-    "head = pd.read_csv(f'{fileurl}/head_nb1.csv', index_col=0, parse_dates=True).squeeze()\n",
+    "fileurl = \"https://raw.githubusercontent.com/pastas/pastas/master/doc/examples/data\"\n",
+    "prec = (\n",
+    "    pd.read_csv(f\"{fileurl}/rain_nb1.csv\", index_col=0, parse_dates=True)\n",
+    "    .squeeze()\n",
+    "    .multiply(1e3)\n",
+    ")  # to mm\n",
+    "evap = (\n",
+    "    pd.read_csv(f\"{fileurl}/evap_nb1.csv\", index_col=0, parse_dates=True)\n",
+    "    .squeeze()\n",
+    "    .multiply(1e3)\n",
+    ")  # to mm\n",
+    "head = pd.read_csv(f\"{fileurl}/head_nb1.csv\", index_col=0, parse_dates=True).squeeze()\n",
     "\n",
     "fig, ax = plt.subplots(3, 1, figsize=(12, 8), sharex=True)\n",
     "prec.plot(ax=ax[0], legend=True, grid=True)\n",
-    "evap.plot(ax=ax[1], color='C1', legend=True, grid=True)\n",
-    "head.plot(ax=ax[2], color='k', legend=True, grid=True);"
+    "evap.plot(ax=ax[1], color=\"C1\", legend=True, grid=True)\n",
+    "head.plot(ax=ax[2], color=\"k\", legend=True, grid=True);"
    ]
   },
   {
@@ -114,8 +122,8 @@
     }
    ],
    "source": [
-    "f = 30 # days\n",
-    "series = prec.rolling(f'{f}D', min_periods=f).sum().dropna()\n",
+    "f = 30  # days\n",
+    "series = prec.rolling(f\"{f}D\", min_periods=f).sum().dropna()\n",
     "series"
    ]
   },
@@ -209,14 +217,14 @@
     }
    ],
    "source": [
-    "tmin, tmax = pd.to_datetime(['1994', '1998'])\n",
-    "plt.figure(figsize=(8,4))\n",
-    "spi2.plot(label='gamma')\n",
-    "spi1.plot(label='pearson3', linestyle='--')\n",
+    "tmin, tmax = pd.to_datetime([\"1994\", \"1998\"])\n",
+    "plt.figure(figsize=(8, 4))\n",
+    "spi2.plot(label=\"gamma\")\n",
+    "spi1.plot(label=\"pearson3\", linestyle=\"--\")\n",
     "plt.xlim(tmin, tmax)\n",
     "plt.legend()\n",
     "plt.grid()\n",
-    "plt.title('SPI for two distributions');"
+    "plt.title(\"SPI for two distributions\");"
    ]
   },
   {
@@ -266,8 +274,8 @@
     }
    ],
    "source": [
-    "pe = (prec - evap).dropna() # calculate precipitation excess\n",
-    "spei = si.spei(pe.rolling(f'{f}D', min_periods=f).sum().dropna())\n",
+    "pe = (prec - evap).dropna()  # calculate precipitation excess\n",
+    "spei = si.spei(pe.rolling(f\"{f}D\", min_periods=f).sum().dropna())\n",
     "spei"
    ]
   },
@@ -357,9 +365,9 @@
     "si.plot.si(spi1, ax=ax[0])\n",
     "si.plot.si(spei, ax=ax[1])\n",
     "si.plot.si(sgi, ax=ax[2])\n",
-    "ax[0].set_xlim(pd.to_datetime(['1994', '1998']))\n",
+    "ax[0].set_xlim(pd.to_datetime([\"1994\", \"1998\"]))\n",
     "[x.grid() for x in ax]\n",
-    "[ax[i].set_ylabel(n, fontsize=14) for i, n in enumerate(['SPI', 'SPEI', 'SGI'])];"
+    "[ax[i].set_ylabel(n, fontsize=14) for i, n in enumerate([\"SPI\", \"SPEI\", \"SGI\"])];"
    ]
   }
  ],
