--- a/doc/examples/example03_drought_NL.ipynb
+++ b/doc/examples/example03_drought_NL.ipynb
@@ -20,7 +20,7 @@
    "outputs": [],
    "source": [
     "import datetime\n",
-    "import spei as si # si for standardized index\n",
+    "import spei as si  # si for standardized index\n",
     "import pandas as pd\n",
     "import pastas as ps\n",
     "import hydropandas as hpd\n",
@@ -44,12 +44,25 @@
    "outputs": [],
    "source": [
     "today = datetime.date.today()\n",
-    "yesterday = (today - datetime.timedelta(days=1)).strftime('%Y-%m-%d')\n",
-    "prec = hpd.PrecipitationObs.from_knmi(260, startdate='1959-07-01', enddate=yesterday).multiply(1e3).squeeze()\n",
+    "yesterday = (today - datetime.timedelta(days=1)).strftime(\"%Y-%m-%d\")\n",
+    "prec = (\n",
+    "    hpd.PrecipitationObs.from_knmi(260, startdate=\"1959-07-01\", enddate=yesterday)\n",
+    "    .multiply(1e3)\n",
+    "    .squeeze()\n",
+    ")\n",
     "prec.index = prec.index.normalize()\n",
-    "evap = hpd.EvaporationObs.from_knmi(260, startdate='1959-07-01', enddate=yesterday).multiply(1e3).squeeze()\n",
+    "evap = (\n",
+    "    hpd.EvaporationObs.from_knmi(260, startdate=\"1959-07-01\", enddate=yesterday)\n",
+    "    .multiply(1e3)\n",
+    "    .squeeze()\n",
+    ")\n",
     "evap.index = evap.index.normalize()\n",
-    "head = pd.read_csv('https://raw.githubusercontent.com/pastas/test-datasets/main/vanderspek_bakker_2017/B32C0572_DE-BILT.csv', index_col=0, parse_dates=True, sep=';')"
+    "head = pd.read_csv(\n",
+    "    \"https://raw.githubusercontent.com/pastas/test-datasets/main/vanderspek_bakker_2017/B32C0572_DE-BILT.csv\",\n",
+    "    index_col=0,\n",
+    "    parse_dates=True,\n",
+    "    sep=\";\",\n",
+    ")"
    ]
   },
   {
@@ -67,8 +80,8 @@
    "source": [
     "# Accumulate time series on monthly basis\n",
     "f = 30\n",
-    "p = prec.rolling(f'{f}D', min_periods=f).sum().iloc[f:]\n",
-    "pe = (prec - evap).rolling(f'{f}D', min_periods=f).sum().iloc[f:]\n",
+    "p = prec.rolling(f\"{f}D\", min_periods=f).sum().iloc[f:]\n",
+    "pe = (prec - evap).rolling(f\"{f}D\", min_periods=f).sum().iloc[f:]\n",
     "\n",
     "spi = si.spi(p, dist=scs.gamma)\n",
     "spei = si.spei(pe, dist=scs.fisk)"
@@ -91,15 +104,15 @@
     }
    ],
    "source": [
-    "xlim = pd.to_datetime(['2018-01-01', yesterday])\n",
+    "xlim = pd.to_datetime([\"2018-01-01\", yesterday])\n",
     "\n",
-    "fig, axs = plt.subplots(2, 1, figsize=(10,8), sharex=True)\n",
+    "fig, axs = plt.subplots(2, 1, figsize=(10, 8), sharex=True)\n",
     "si.plot.si(spi, bound=3.5, ax=axs[0])\n",
     "si.plot.si(spei, bound=3.5, ax=axs[1])\n",
-    "[(x.grid(), x.set_xlim(xlim), x.set_ylabel('Z-Score')) for x in axs]\n",
-    "axs[0].set_title('Standardized Precipitation Index')\n",
-    "axs[1].set_title('Standardized Precipitation Evaporation Index')\n",
-    "fig.suptitle('Meteoroligical Drought-Indices De Bilt')\n",
+    "[(x.grid(), x.set_xlim(xlim), x.set_ylabel(\"Z-Score\")) for x in axs]\n",
+    "axs[0].set_title(\"Standardized Precipitation Index\")\n",
+    "axs[1].set_title(\"Standardized Precipitation Evaporation Index\")\n",
+    "fig.suptitle(\"Meteoroligical Drought-Indices De Bilt\")\n",
     "fig.tight_layout()"
    ]
   },
@@ -167,11 +180,13 @@
     }
    ],
    "source": [
-    "h = head['Head [m] B32C0572_DE-BILT'].rename('Head').dropna()\n",
+    "h = head[\"Head [m] B32C0572_DE-BILT\"].rename(\"Head\").dropna()\n",
     "ml = ps.Model(h)\n",
-    "rm = ps.RechargeModel(prec, evap, ps.Exponential, recharge=ps.rch.FlexModel(gw_uptake=True))\n",
+    "rm = ps.RechargeModel(\n",
+    "    prec, evap, ps.Exponential, recharge=ps.rch.FlexModel(gw_uptake=True)\n",
+    ")\n",
     "ml.add_stressmodel(rm)\n",
-    "ml.solve(tmin='1970-07-01', report=True)\n",
+    "ml.solve(tmin=\"1970-07-01\", report=True)\n",
     "ml.plots.results();"
    ]
   },
@@ -188,8 +203,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gws = ml.simulate(tmin='1990-07-01', tmax=yesterday)\n",
-    "sgi = si.sgi(gws.rolling('3D').mean())"
+    "gws = ml.simulate(tmin=\"1990-07-01\", tmax=yesterday)\n",
+    "sgi = si.sgi(gws.rolling(\"3D\").mean())"
    ]
   },
   {
@@ -216,15 +231,17 @@
     }
    ],
    "source": [
-    "fig, axs = plt.subplot_mosaic([[\"SPI\"], [\"SPEI\"], [\"SGI\"]], figsize=(10,8), sharex=True)\n",
+    "fig, axs = plt.subplot_mosaic(\n",
+    "    [[\"SPI\"], [\"SPEI\"], [\"SGI\"]], figsize=(10, 8), sharex=True\n",
+    ")\n",
     "si.plot.si(spi, bound=3.5, ax=axs[\"SPI\"])\n",
     "si.plot.si(spei, bound=3.5, ax=axs[\"SPEI\"])\n",
     "si.plot.si(sgi, bound=3.5, ax=axs[\"SGI\"])\n",
-    "[(axs[x].grid(), axs[x].set_xlim(xlim), axs[x].set_ylabel('Z-Score')) for x in axs]\n",
-    "axs[\"SPI\"].set_title('Standardized Precipitation Index 1')\n",
-    "axs[\"SPEI\"].set_title('Standardized Precipitation Evaporation Index 1')\n",
-    "axs[\"SGI\"].set_title('Standardized Groundwater Index')\n",
-    "fig.suptitle('Drought-Indices for De Bilt', fontsize=14)\n",
+    "[(axs[x].grid(), axs[x].set_xlim(xlim), axs[x].set_ylabel(\"Z-Score\")) for x in axs]\n",
+    "axs[\"SPI\"].set_title(\"Standardized Precipitation Index 1\")\n",
+    "axs[\"SPEI\"].set_title(\"Standardized Precipitation Evaporation Index 1\")\n",
+    "axs[\"SGI\"].set_title(\"Standardized Groundwater Index\")\n",
+    "fig.suptitle(\"Drought-Indices for De Bilt\", fontsize=14)\n",
     "fig.tight_layout()\n",
     "# fig.savefig('Drought_Index_Bilt.png', dpi=600, bbox_inches='tight')"
    ]
@@ -253,9 +270,11 @@
     }
    ],
    "source": [
-    "ax = si.plot.monthly_density(spei, years=[today.year - 1, today.year], months=[today.month])\n",
-    "ax.set_xlabel('Z-Score')\n",
-    "ax.set_title('SPEI');"
+    "ax = si.plot.monthly_density(\n",
+    "    spei, years=[today.year - 1, today.year], months=[today.month]\n",
+    ")\n",
+    "ax.set_xlabel(\"Z-Score\")\n",
+    "ax.set_title(\"SPEI\");"
    ]
   }
  ],
