--- a/doc/examples/example04_package_comparison.ipynb
+++ b/doc/examples/example04_package_comparison.ipynb
@@ -60,7 +60,7 @@
     "    .squeeze()\n",
     "    .multiply(1e3)\n",
     ")  # to mm\n",
-    "prec.plot(grid=True, title=\"Precipitation\", figsize=(8,4));"
+    "prec.plot(grid=True, title=\"Precipitation\", figsize=(8, 4));"
    ]
   },
   {
@@ -82,7 +82,7 @@
    "source": [
     "# get rolling sum\n",
     "prec_rsum = prec.rolling(\"30D\", min_periods=30).sum().dropna()\n",
-    "prec_rsum.plot(grid=True, title=\"Precipitation, 30day rolling sum\", figsize=(8,4));"
+    "prec_rsum.plot(grid=True, title=\"Precipitation, 30day rolling sum\", figsize=(8, 4));"
    ]
   },
   {
@@ -125,7 +125,7 @@
    ],
    "source": [
     "spi = si.spi(prec_rsum, dist=scs.gamma, prob_zero=True)\n",
-    "spi # pandas Series"
+    "spi  # pandas Series"
    ]
   },
   {
@@ -263,6 +263,7 @@
    ],
    "source": [
     "from standard_precip import spi as sp_spi\n",
+    "\n",
     "# standard_precip also needs rolling sum dataframe, even though you provide freq=\"M\" and scale = 1\n",
     "precdf = prec_rsum.to_frame().reset_index().copy()\n",
     "\n",
@@ -274,14 +275,16 @@
     "    precdf,\n",
     "    date_col=\"date\",\n",
     "    precip_cols=\"rain\",\n",
-    "    freq=\"M\",  \n",
-    "    scale=1, # scale is weird naming choice here because that's the same keyword used for the standard deviation in SciPy\n",
+    "    freq=\"M\",\n",
+    "    scale=1,  # scale is weird naming choice here because that's the same keyword used for the standard deviation in SciPy\n",
     "    fit_type=\"mle\",\n",
     "    dist_type=\"gam\",\n",
     ")\n",
-    "standardp_spi.index = standardp_spi.loc[:, \"date\"].values # create datetimeindex because date had to be a column\n",
+    "standardp_spi.index = standardp_spi.loc[\n",
+    "    :, \"date\"\n",
+    "].values  # create datetimeindex because date had to be a column\n",
     "\n",
-    "standardp_spi # pandas DataFrame"
+    "standardp_spi  # pandas DataFrame"
    ]
   },
   {
@@ -299,7 +302,7 @@
    "outputs": [],
    "source": [
     "from climate_indices.compute import scale_values, Periodicity\n",
-    "from climate_indices import compute, indices, utils\n"
+    "from climate_indices import compute, indices, utils"
    ]
   },
   {
@@ -342,30 +345,30 @@
     "values = prec_rsum.values\n",
     "\n",
     "scaled_values = compute.scale_values(\n",
-    "                    values,\n",
-    "                    scale=scale,\n",
-    "                    periodicity=periodicity,\n",
-    "                )\n",
+    "    values,\n",
+    "    scale=scale,\n",
+    "    periodicity=periodicity,\n",
+    ")\n",
     "\n",
     "alphas, betas = compute.gamma_parameters(\n",
-    "                    scaled_values,\n",
-    "                    data_start_year=initial_year,\n",
-    "                    calibration_start_year=calibration_year_initial,\n",
-    "                    calibration_end_year=calibration_year_final,\n",
-    "                    periodicity=periodicity,\n",
-    "                )\n",
+    "    scaled_values,\n",
+    "    data_start_year=initial_year,\n",
+    "    calibration_start_year=calibration_year_initial,\n",
+    "    calibration_end_year=calibration_year_final,\n",
+    "    periodicity=periodicity,\n",
+    ")\n",
     "\n",
     "gamma_params = {\"alpha\": alphas, \"beta\": betas}\n",
     "\n",
     "spival = indices.spi(\n",
-    "        values,\n",
-    "        scale=scale,\n",
-    "        distribution=indices.Distribution.gamma,\n",
-    "        data_start_year=initial_year,\n",
-    "        calibration_year_initial=calibration_year_initial,\n",
-    "        calibration_year_final=calibration_year_final,\n",
-    "        periodicity=compute.Periodicity.daily,\n",
-    "        fitting_params=gamma_params,\n",
+    "    values,\n",
+    "    scale=scale,\n",
+    "    distribution=indices.Distribution.gamma,\n",
+    "    data_start_year=initial_year,\n",
+    "    calibration_year_initial=calibration_year_initial,\n",
+    "    calibration_year_final=calibration_year_final,\n",
+    "    periodicity=compute.Periodicity.daily,\n",
+    "    fitting_params=gamma_params,\n",
     ")\n",
     "\n",
     "climateind_spi = pd.Series(spival, index=prec_rsum.index, name=\"Climate Index SPI\")\n",
@@ -397,14 +400,30 @@
     }
    ],
    "source": [
-    "f, ax = plt.subplot_mosaic([[\"SPEI\"],[\"standard_precip\"], [\"climate_indices\"], [\"DIFF\"], [\"DIFF\"]], figsize=(10,5), sharex=True, height_ratios=[2,2,2,1,1])\n",
+    "f, ax = plt.subplot_mosaic(\n",
+    "    [[\"SPEI\"], [\"standard_precip\"], [\"climate_indices\"], [\"DIFF\"], [\"DIFF\"]],\n",
+    "    figsize=(10, 5),\n",
+    "    sharex=True,\n",
+    "    height_ratios=[2, 2, 2, 1, 1],\n",
+    ")\n",
     "spi.plot(ax=ax[\"SPEI\"], grid=True)\n",
     "climateind_spi.plot(ax=ax[\"climate_indices\"], color=\"C2\", grid=True)\n",
-    "standardp_spi.loc[:, \"rain_calculated_index\"].plot(ax=ax[\"standard_precip\"], color=\"C1\", grid=True)\n",
-    "[(ax[x].set_ylim(-3.5, 3.5), ax[x].set_title(x + \" package\"), ax[x].set_ylabel(\"SPI\")) for x in list(ax.keys())[0:3]]\n",
+    "standardp_spi.loc[:, \"rain_calculated_index\"].plot(\n",
+    "    ax=ax[\"standard_precip\"], color=\"C1\", grid=True\n",
+    ")\n",
+    "[\n",
+    "    (\n",
+    "        ax[x].set_ylim(-3.5, 3.5),\n",
+    "        ax[x].set_title(x + \" package\"),\n",
+    "        ax[x].set_ylabel(\"SPI\"),\n",
+    "    )\n",
+    "    for x in list(ax.keys())[0:3]\n",
+    "]\n",
     "\n",
     "(spi - climateind_spi).plot(ax=ax[\"DIFF\"], color=\"C3\", label=\"SPEI - climate_indices\")\n",
-    "(spi - standardp_spi.loc[:, \"rain_calculated_index\"]).plot(ax=ax[\"DIFF\"], color=\"C4\", label=\"SPEI - standard_precip\", grid=True)\n",
+    "(spi - standardp_spi.loc[:, \"rain_calculated_index\"]).plot(\n",
+    "    ax=ax[\"DIFF\"], color=\"C4\", label=\"SPEI - standard_precip\", grid=True\n",
+    ")\n",
     "# ax[\"DIFF1\"].set_ylim(-0.05, 0.05)\n",
     "ax[\"DIFF\"].legend(ncol=2)\n",
     "ax[\"DIFF\"].set_title(\"SPEI - other package\")\n",
