--- a/doc/examples/example02_distributions.ipynb
+++ b/doc/examples/example02_distributions.ipynb
@@ -230,7 +230,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "spei_dev",
+   "display_name": "speidev",
    "language": "python",
    "name": "python3"
   },
@@ -244,12 +244,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "4c23bd3ec3b57aa110d7395b398694023be95a96821d5bd1b8b1b4156052efce"
+    "hash": "2279c7ae29edfb28b339b66ce2f59ffc873c6e74c684d306a7300ed42278bdc7"
    }
   }
  },
