--- a/doc/examples/example03_drought_NL.ipynb
+++ b/doc/examples/example03_drought_NL.ipynb
@@ -271,7 +271,7 @@
    ],
    "source": [
     "ax = si.plot.monthly_density(\n",
-    "    spei, years=[today.year - 1, today.year], months=[today.month-1]\n",
+    "    spei, years=[today.year - 1, today.year], months=[today.month - 1]\n",
     ")\n",
     "ax.set_xlabel(\"Z-Score\")\n",
     "ax.set_title(\"SPEI\");"
