--- a/doc/examples/example04_package_comparison.ipynb
+++ b/doc/examples/example04_package_comparison.ipynb
@@ -406,11 +406,17 @@
     "    sharex=True,\n",
     "    height_ratios=[2, 1],\n",
     ")\n",
-    "spi.plot(ax=ax[\"SPI\"], grid=True, linestyle='-', label=\"SPI\")\n",
+    "spi.plot(ax=ax[\"SPI\"], grid=True, linestyle=\"-\", label=\"SPI\")\n",
     "standardp_spi.loc[:, \"rain_calculated_index\"].plot(\n",
-    "    ax=ax[\"SPI\"], color=\"C1\", grid=True, linestyle='--', label=\"standard_precip\",\n",
+    "    ax=ax[\"SPI\"],\n",
+    "    color=\"C1\",\n",
+    "    grid=True,\n",
+    "    linestyle=\"--\",\n",
+    "    label=\"standard_precip\",\n",
     ")\n",
-    "climateind_spi.plot(ax=ax[\"SPI\"], color=\"C2\", grid=True, linestyle=':', label=\"climate_indices\")\n",
+    "climateind_spi.plot(\n",
+    "    ax=ax[\"SPI\"], color=\"C2\", grid=True, linestyle=\":\", label=\"climate_indices\"\n",
+    ")\n",
     "\n",
     "ax[\"SPI\"].set_ylim(-3.5, 3.5),\n",
     "ax[\"SPI\"].set_title(\"Comparison\"),\n",
