--- a/doc/examples/example04_package_comparison.ipynb
+++ b/doc/examples/example04_package_comparison.ipynb
@@ -463,7 +463,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "head = pd.read_csv(\"https://raw.githubusercontent.com/pastas/pastas/master/doc/examples/data/B32C0639001.csv\", index_col=0, parse_dates=True).squeeze()\n",
+    "head = pd.read_csv(\n",
+    "    \"https://raw.githubusercontent.com/pastas/pastas/master/doc/examples/data/B32C0639001.csv\",\n",
+    "    index_col=0,\n",
+    "    parse_dates=True,\n",
+    ").squeeze()\n",
     "\n",
     "sgi = si.sgi(head)\n",
     "sgi_pastas = ps.stats.sgi(head)"
@@ -589,7 +593,7 @@
     }
    ],
    "source": [
-    "pd.concat([sgi, sgi_pastas], axis=1).rename(columns={0:\"SGI\", \"head\":\"Pastas\"})"
+    "pd.concat([sgi, sgi_pastas], axis=1).rename(columns={0: \"SGI\", \"head\": \"Pastas\"})"
    ]
   },
   {
@@ -616,13 +620,7 @@
     "    height_ratios=[2, 1],\n",
     ")\n",
     "sgi.plot(ax=ax[\"SGI\"], grid=True, linestyle=\"-\", label=\"SGI\")\n",
-    "sgi_pastas.plot(\n",
-    "    ax=ax[\"SGI\"],\n",
-    "    color=\"C1\",\n",
-    "    grid=True,\n",
-    "    linestyle=\"--\",\n",
-    "    label=\"pastas\"\n",
-    "    )\n",
+    "sgi_pastas.plot(ax=ax[\"SGI\"], color=\"C1\", grid=True, linestyle=\"--\", label=\"pastas\")\n",
     "ax[\"SGI\"].set_ylim(-3.5, 3.5),\n",
     "ax[\"SGI\"].set_title(\"Comparison\"),\n",
     "ax[\"SGI\"].set_ylabel(\"SGI\"),\n",
