--- a/doc/examples/example04_package_comparison.ipynb
+++ b/doc/examples/example04_package_comparison.ipynb
@@ -84,7 +84,9 @@
    "source": [
     "# get rolling sum\n",
     "prec_rsum = prec.rolling(\"30D\", min_periods=30).sum().dropna()\n",
-    "prec_rsum.plot(grid=True, linewidth=0.5, title=\"Precipitation, 30day rolling sum\", figsize=(6.5, 4));"
+    "prec_rsum.plot(\n",
+    "    grid=True, linewidth=0.5, title=\"Precipitation, 30day rolling sum\", figsize=(6.5, 4)\n",
+    ");"
    ]
   },
   {
