move to object oriented and adjust notebooks

--- a/doc/examples/example04_package_comparison.ipynb
+++ b/doc/examples/example04_package_comparison.ipynb
@@ -128,7 +128,7 @@
     }
    ],
    "source": [
-    "spi = si.spi(prec_rsum, dist=scs.gamma, prob_zero=True, freq=\"ME\")\n",
+    "spi = si.spi(prec_rsum, dist=scs.gamma, prob_zero=True, fit_freq=\"ME\")\n",
     "spi  # pandas Series"
    ]
   },
@@ -449,7 +449,7 @@
     "    parse_dates=True,\n",
     ").squeeze()\n",
     "\n",
-    "sgi = si.sgi(head, freq=\"ME\")\n",
+    "sgi = si.sgi(head, fit_freq=\"ME\")\n",
     "sgi_pastas = ps.stats.sgi(head)"
    ]
   },
