--- a/doc/examples/example04_package_comparison.ipynb
+++ b/doc/examples/example04_package_comparison.ipynb
@@ -28,7 +28,9 @@
     "import pastas as ps\n",
     "import pandas as pd\n",
     "import scipy.stats as scs\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "print(si.show_versions())"
    ]
   },
   {
