update docstring on timescale

--- a/doc/examples/example01_indices.ipynb
+++ b/doc/examples/example01_indices.ipynb
@@ -27,7 +27,7 @@
      "text": [
       "Versions\n",
       "python: 3.10.12\n",
-      "spei: 0.4.0\n",
+      "spei: 0.4.1\n",
       "numpy: 1.26.4\n",
       "scipy: 1.12.0\n",
       "matplotlib: 3.8.3\n",
@@ -131,7 +131,7 @@
    ],
    "source": [
     "f = 90  # days\n",
-    "series = prec.rolling(f\"{f}D\", min_periods=f).sum().dropna()\n",
+    "series = prec.rolling(f, min_periods=f).sum().dropna()\n",
     "series"
    ]
   },
