--- a/doc/examples/example04_package_comparison.ipynb
+++ b/doc/examples/example04_package_comparison.ipynb
@@ -14,6 +14,7 @@
     "* standard_precip (Python)\n",
     "* climate_indices (Python)\n",
     "* pastas (Python)\n",
+    "* SPEI (R)\n",
     "\n",
     "## Required packages"
    ]
