format with ruff

--- a/doc/examples/example04_package_comparison.ipynb
+++ b/doc/examples/example04_package_comparison.ipynb
@@ -40,11 +40,11 @@
     }
    ],
    "source": [
-    "import spei as si\n",
-    "import pastas as ps\n",
-    "import pandas as pd\n",
-    "import scipy.stats as scs\n",
     "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import pastas as ps\n",
+    "import scipy.stats as scs\n",
+    "import spei as si\n",
     "\n",
     "print(si.show_versions())"
    ]
@@ -418,11 +418,12 @@
     }
    ],
    "source": [
-    "from rpy2.robjects.packages import importr\n",
     "from rpy2.robjects import pandas2ri\n",
+    "from rpy2.robjects.packages import importr\n",
+    "\n",
     "pandas2ri.activate()\n",
     "\n",
-    "sr = importr('SPEI')\n",
+    "sr = importr(\"SPEI\")\n",
     "\n",
     "spir_res = sr.spi(prec_rsum.values, scale=3)\n",
     "r_spi = pd.Series(spir_res[2].ravel(), index=prec_rsum.index, name=\"SPI\")\n",
@@ -471,13 +472,11 @@
     "# climateind_spi.plot(\n",
     "#     ax=ax[\"SPI\"], color=\"C2\", grid=True, linestyle=\":\", label=\"climate_indices\"\n",
     "# )\n",
-    "r_spi.plot(\n",
-    "    ax=ax[\"SPI\"], color=\"C2\", grid=True, linestyle=\":\", label=\"R package\"\n",
-    ")\n",
+    "r_spi.plot(ax=ax[\"SPI\"], color=\"C2\", grid=True, linestyle=\":\", label=\"R package\")\n",
     "\n",
-    "ax[\"SPI\"].set_ylim(-3.5, 3.5),\n",
-    "ax[\"SPI\"].set_title(\"Comparison\"),\n",
-    "ax[\"SPI\"].set_ylabel(\"SPI\"),\n",
+    "(ax[\"SPI\"].set_ylim(-3.5, 3.5),)\n",
+    "(ax[\"SPI\"].set_title(\"Comparison\"),)\n",
+    "(ax[\"SPI\"].set_ylabel(\"SPI\"),)\n",
     "ax[\"SPI\"].legend(ncol=3)\n",
     "\n",
     "(spi - standardp_spi.iloc[:, -1]).plot(\n",
@@ -679,9 +678,9 @@
     ")\n",
     "sgi.plot(ax=ax[\"SGI\"], grid=True, linestyle=\"-\", label=\"SGI\")\n",
     "sgi_pastas.plot(ax=ax[\"SGI\"], color=\"C1\", grid=True, linestyle=\"--\", label=\"pastas\")\n",
-    "ax[\"SGI\"].set_ylim(-3.5, 3.5),\n",
-    "ax[\"SGI\"].set_title(\"Comparison\"),\n",
-    "ax[\"SGI\"].set_ylabel(\"SGI\"),\n",
+    "(ax[\"SGI\"].set_ylim(-3.5, 3.5),)\n",
+    "(ax[\"SGI\"].set_title(\"Comparison\"),)\n",
+    "(ax[\"SGI\"].set_ylabel(\"SGI\"),)\n",
     "ax[\"SGI\"].legend(ncol=3)\n",
     "\n",
     "(sgi - sgi_pastas).plot(ax=ax[\"DIFF\"], color=\"C3\", label=\"SGI - pastas\")\n",
