--- a/doc/examples/example05_multiyear_drought.ipynb
+++ b/doc/examples/example05_multiyear_drought.ipynb
@@ -233,9 +233,7 @@
     }
    ],
    "source": [
-    "ax = si.plot.heatmap(\n",
-    "    [spei1, spei3, spei6, spei9, spei12, spei24], cmap=\"vik_r\", vmax=3\n",
-    ")\n",
+    "ax = si.plot.heatmap([spei1, spei3, spei6, spei9, spei12, spei24], cmap=\"vik_r\", vmax=3)\n",
     "ax.xaxis.set_major_locator(mpl.dates.YearLocator())\n",
     "ax.xaxis.set_minor_locator(mpl.dates.MonthLocator())\n",
     "ax.set_xlim(pd.Timestamp(\"2010\"), pd.Timestamp(\"2015\"))"
