--- a/doc/examples/example02_distributions.ipynb
+++ b/doc/examples/example02_distributions.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -39,6 +39,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import scipy.stats as scs\n",
+    "\n",
     "import spei as si  # si for standardized index\n",
     "\n",
     "print(si.show_versions())"
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -105,14 +106,14 @@
    "source": [
     "## Plot distributions\n",
     "\n",
-    "The internal plot.dist method can be used to plot the (cumulative) histogram and the scipy.stats distribution fit. The given distribution using a [maximum likelihood estimate](https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.rv_continuous.fit.html#scipy.stats.rv_continuous.fit) where a negative log-likelihood function is minimized. It can be important to visually check if the (cumulative) density function is actually valid for the (cumulative) histogram of the data. Let's first try that for the pearson3 distribution. \n",
+    "The internal plot.dist method can be used to plot the (cumulative) histogram and the scipy.stats distribution fit. The given distribution using a [maximum likelihood estimate](https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.rv_continuous.fit.html#scipy.stats.rv_continuous.fit) where a negative log-likelihood function is minimized. It can be important to visually check if the (cumulative) density function is actually valid for the (cumulative) histogram of the data. Let's first try that for the log-logistic (fisk) distribution. \n",
     "\n",
     "We'll reproduce some steps that are normally done internally. Therefor we need to create the SI class and fit the distribution."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,12 +125,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets fit the pearson3 distribution"
+    "Lets fit the log-logistic (fisk) distribution"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -178,14 +179,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The blue plotted line is the fitted pearson3 distribution and the orange fill is the cumulative histogram. For the fitted distributions seem to describe the precipitation excess values pretty well. The legend shows the p_value of the two-sided        Kolmogorov-Smirnov test for goodness of fit. The null hypothesis two-sided test is that the two distributions are identical, the alternative is that they are not identical. Say we choose a confidence level of 95%; that is, we will reject the null hypothesis in favor of the alternative if the p-value is less than 0.05. For e.g. march the p-value is lower than our threshold of 0.05, so we reject the null hypothesis in favor of the default “two-sided” alternative: the data are not distributed according to the fitted pearson3 distribution. But not finding the appropriate distribution is one of the big uncertainties of the standardized index method. However, not a perfect fit does not mean this distribution is not fit-for-purpose of calculating a drought index. That is up to the modeller to decide. \n",
+    "The blue plotted line is the fitted log-logistic (fisk) distribution and the orange fill is the cumulative histogram. For the fitted distributions seem to describe the precipitation excess values pretty well. The legend shows the p_value of the two-sided        Kolmogorov-Smirnov test for goodness of fit. The null hypothesis two-sided test is that the two distributions are identical, the alternative is that they are not identical. Say we choose a confidence level of 95%; that is, we will reject the null hypothesis in favor of the alternative if the p-value is less than 0.05. For e.g. march the p-value is lower than our threshold of 0.05, so we reject the null hypothesis in favor of the default “two-sided” alternative: the data are not distributed according to the fitted pearson3 distribution. But not finding the appropriate distribution is one of the big uncertainties of the standardized index method. However, not a perfect fit does not mean this distribution is not fit-for-purpose of calculating a drought index. That is up to the modeller to decide. \n",
     "\n",
     "We could try to fit another distribution, e.g. Fisk. Let's plot the probability density function instead of the cdf to get more insight."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now see more cleary that there is a discrepancy between the data and the fitted distribution. However, the p_value is only less than 0.05 for march and august for the fisk distribution. For the pearson3 this was also the case for june, october and november. So the fisk distribution seems better in for this precipitation excess series than the pearson3 distribution."
+    "We can now see more cleary that there is a discrepancy between the data and the fitted distribution. However, the p_value is only less than 0.05 for march and august for the fisk distribution. For the log-logistic (fisk) this was also the case for june, october and november. So the fisk distribution seems better in for this precipitation excess series than the log-logistic (fisk) distribution."
    ]
   },
   {
@@ -248,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
