--- a/doc/examples/example05_multiyear_drought.ipynb
+++ b/doc/examples/example05_multiyear_drought.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Analyzing multi-year droughts\n",
     "\n",
-    "After Mourik et al. (2024) - Regional drivers and characteristics of multi-year droughts"
+    "After van Mourik, J. and Ruijsch, D. and van der Wiel, K. and Hazeleger, W. and Wanders, N. (2025) - [Regional drivers and characteristics of multi-year droughts](https://dx.doi.org/10.2139/ssrn.4974995)"
    ]
   },
   {
