--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,14 +1,3 @@
-@article{LloydHughes_spi_2002,
-  author  = {Lloyd-Hughes, Benjamin and Saunders, Mark A.},
-  title   = {A drought climatology for {Europe}},
-  journal = {International Journal of Climatology},
-  volume  = {22},
-  number  = {13},
-  pages   = {1571--1592},
-  doi     = {10.1002/joc.846},
-  year    = {2002}
-}
-
 @article{scipy_paper_2020,
   author  = {Virtanen, Pauli and Gommers, Ralf and Oliphant, Travis E. and
              Haberland, Matt and Reddy, Tyler and Cournapeau, David and
@@ -34,10 +23,9 @@
 @inproceedings{pandas_paper_2010,
   author    = {McKinney, Wes},
   title     = {Data Structures for Statistical Computing in {Python}},
-  booktitle = {Proceedings of the 9th Python in Science Conference},
+  booktitle = {Proceedings of the 9th {Python} in Science Conference},
   pages     = {56--61},
   year      = {2010},
-  editor    = {St\'efan van der Walt and Jarrod Millman},
   doi       = {10.25080/Majora-92bf1922-00a}
 }
 
@@ -82,3 +70,41 @@
   doi       = {10.1038/s41586-020-2649-2},
   publisher = {Springer Science and Business Media {LLC}}
 }
+
+@inproceedings{mckee_spi_1993,
+  title       = {The relationship of drought frequency and duration to time scales},
+  author      = {McKee, Thomas B. and Doesken, N. J. and Kleist, J.},
+  proceedings = {Eigth Conference on Applied Climatology},
+  publisher   = {Department of Atmospheric Science, Colorado State University},
+  year        = {1993}
+}
+
+@article{lloydhughes_spi_2002,
+  author  = {Lloyd-Hughes, Benjamin and Saunders, Mark A.},
+  title   = {A drought climatology for {Europe}},
+  journal = {International Journal of Climatology},
+  volume  = {22},
+  number  = {13},
+  pages   = {1571--1592},
+  doi     = {10.1002/joc.846},
+  year    = {2002}
+}
+
+@article{vicenteserrano_spei_2010,
+  author  = {Vicente-Serrano, S. M. and Beguería, S. and López-Moreno, J. I.},
+  title   = {A Multi-scalar drought index sensitive to global warming: The Standardized Precipitation Evapotranspiration Index},
+  journal = {Journal of Climate},
+  year    = {2010},
+  doi     = {10.1175/2009JCLI2909.1}
+}
+
+@article{bloomfield_sgi_2013,
+  author  = {Bloomfield, J. P. and Marchant, B. P.},
+  title   = {Analysis of groundwater drought building on the standardised precipitation index approach},
+  journal = {Hydrology and Earth System Sciences},
+  year    = {2013},
+  volume  = {17},
+  pages   = {4769--4787},
+  doi     = {10.5194/hess-17-4769-2013}
+}
+
