add ref for ssfi and ssmi

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -21,7 +21,7 @@
 }
 
 @inproceedings{pandas_paper_2010,
-  author    = {McKinney, Wes},
+  author    = {McKinney, W.},
   title     = {Data Structures for Statistical Computing in {Python}},
   booktitle = {Proceedings of the 9th {Python} in Science Conference},
   pages     = {56--61},
@@ -106,5 +106,27 @@
   volume  = {17},
   pages   = {4769--4787},
   doi     = {10.5194/hess-17-4769-2013}
+}
+
+
+@article{vicenteserrano_ssfi_2010,
+  author  = {Vicente-Serrano, S. M. and López-Moreno, J. I. and Beguería, S. and Lorenzo-Lacruz, J. and Azorin-Molina, C. and Morán-Tejeda, E.},
+  title   = {Accurate Computation of a Streamflow Drought Index},
+  journal = {Journal of Hydrologic Engineering},
+  volume  = {17},
+  number  = {2},
+  pages   = {318--332},
+  year    = {2012},
+  doi     = {10.1061/(ASCE)HE.1943-5584.0000433}
+}
+
+@article{sheffield_ssmi_2004,
+  author  = {Sheffield, J. and Goteti, G. and Wen, F. and Wood, E. F.},
+  title   = {A simulated soil moisture based drought analysis for the United States},
+  journal = {Journal of Geophysical Research: Atmospheres},
+  volume  = {109},
+  number  = {D24},
+  doi     = {10.1029/2004JD005182},
+  year    = {2004}
 }
 
