update pandas ref and footnote

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -30,7 +30,7 @@
 }
 
 @software{pandas_software_2020,
-  author    = {The pandas development team},
+  author    = {{The pandas development team}},
   title     = {pandas-dev/pandas: Pandas},
   year      = {2024},
   publisher = {Zenodo},
